# Course_NEW

./: README.md  pyproject.toml
tests/: conftest.py  test_functions.py
utils/: funcions.py  main.py
