[tool.poetry]
name = "course-new"
version = "0.1.0"
description = ""
authors = ["Grandic <d.bitkov@gmail.com>"]
readme = "README.md"
packages = [{include = "course_new"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
